--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@develoka/angka-rupiah-js": "^1.0.3",
     "@develoka/angka-terbilang-js": "^1.4.2",
     "@nuxt/ui": "^3.1.3",
+    "@vercel/speed-insights": "^1.2.0",
     "@vueform/multiselect": "^2.6.11",
     "nuxt": "^3.17.5",
     "terbilang-ts": "^2.1.0",
